2003-06-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/topdocs/index.tely (Top): typo

2003-06-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* configure.in: Add unsupported check for g++ >= 3.3.

	* stepmake/aclocal.m4 (STEPMAKE_CHECK_VERSION_UNSUPPORTED): New
	function (backport.)

2003-05-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/ly2dvi.py (extra_init): add compat2 to latexoptions. 

2003-05-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (fonts): Also make fontball.

2003-05-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/*:
	* lily/main.cc: It's 2003 already; messages only.

	* Documentation/user/GNUmakefile: backport: Compatibility fix for
	new makeinfo.  Please upgrade to texinfo CVS or pretest > 4.5.90
	(rsn) for making binary packages; info splitting bug has been
	fixed.

2003-05-16  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: release 1.6.10
	
	* lily/multi-measure-rest-engraver.cc
	(start_translation_timestep): backport of 1.7 grace + mmrest fix. 

2003-04-11  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* python/lilylib.py.in: temporary directory vulnerability fix.

2003-04-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (SUBDIRS): midi2ly.1 build fix backport: build
	python before scripts (thanks Anthony).

2003-04-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* debian: Update.  Remove mentioning of `mudela'; There's no such
	thing.
	
2003-04-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Backport flex issue:

	    * stepmake/aclocal.m4: Include compile fix for broken flex, as
	    used in includable-lexer.hh.

	    * lily/lexer.ll (avoid_silly_flex_induced_gcc_warnings): Disable.

	    * lily/includable-lexer.cc [!HAVE_FLEXLEXER_YY_CURRENT_BUFFER]
	    (yy_current_buffer): New macro, compile hacks for flex 2.5.29.

	    * lily/include/includable-lexer.hh: 
	    * lily/lexer.ll: Hack for multiple include of FlexLexer.h.

	    * config.hh.in (HAVE_FLEXLEXER_YY_CURRENT_BUFFER): Add.

	    * aclocal.m4: Regenerate.
